--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zjq-utils",
   "version": "1.0.0",
   "main": "index.js",
+  "repository": "https://github.com/your-ten/zjq-utils.git",
   "author": "zhangjunqi <1974097603@qq.com>",
   "license": "MIT"
 }
